| Summary: | ASTERISK-25865: Message-Account Missing From PJSIP MWI | ||
| Reporter: | Ross Beer (rossbeer) | Labels: | |
| Date Opened: | 2016-03-24 10:35:54 | Date Closed: | 2016-04-04 14:17:49 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_mwi_body_generator |
| Versions: | 13.8.0-rc1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The Message-Account header is missing from the PJSIP MWI implementation.
This header was in chan_sip however is now missing from PJSIP. Chan_sip allowed setting of the account via the configuration variable 'vmexten' within the sip.conf | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-03-24 10:35:54.611-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. | ||